@@ -74,6 +74,10 @@ debbugs (2.4.2~exp2) UNRELEASED; urgency=low
   * Fix lintian issues: debbugs source:
     debian-rules-makemaker-prefix-is-deprecated line 44,
     debian-rules-makemaker-prefix-is-deprecated line 56.
+  * Fix lintian issues: libdebbugs-perl: spelling-error-in-manpage for:
+    + usr/share/man/man3/Debbugs::Recipients.3pm.gz
+    + usr/share/man/man3/Debbugs::SOAP.3pm.gz
+    + usr/share/man/man3/Debbugs::Status.3pm.gz
 
  -- Don Armstrong <don@debian.org>  Wed, 25 Aug 2010 01:57:38 -0700
 
